--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="header">
-                  <h1>We are here for managing fund data.</h1>
+                  <h1>We are creating unique page</h1>
             </div>
 
             <!--------------- hero section ends here --------------->
